Basic Theorem/Statement classes

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="truthmines.css">
 
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet'>
+
     <!-- Dependencies -->
     <script src="externals/es6-shim.min.js"></script>
     <script src="externals/system.src.js"></script>
